@@ -1,5 +1,8 @@
 2011-12-06  Tim Waugh  <twaugh@redhat.com>
 
+	* cupsconnection.c, cupsmodule.c, cupsppd.c: Use
+	Py_RETURN_NONE where appropriate.
+
 	* cupsmodule.c, cupsppd.c: Fixed reference count issues with
 	Py_None (trac #17).
 
